chore: resolve Sonar issues